# kweb-api-py

./: .gitignore  010-kweb-export-to-normal.py  020-brain-remove-forgotten.py  030-html-to-md-conversion.py  040-extract-db.py  045-brain-link-types.py  070-wikilink-extractor.py  080-md-replace-brain-links.py  130-make-wikidata-cache.py  150-migrate-colors.py  20-brain-remove-forgotten.py  22-html-to-md-conversion.py  25-extract-db.py  30-kweb-name-extractor.py  30-new-db.py  40-kweb-name-extractor.py  40-kweb-wikilink-extractor.py  40-name-extractor.py  50-kweb-wikilink-extractor.py  50-wikilink-extractor.py  70-wiki_search_script.py  80-wikidata_search_script.py  90-wikidata_search_by_name_script.py  95-link-names-from-json.py  95-link-names-from-old-xml.py  95-update_kweb_links.py  96-make-wikidata-cache.py  97-wikidata-links-generator.py  99-kweb-xml-find-wdid.py  a-entities.json  a-extract-entities.py  a05-create-link-names-list.py  a10-extract-entities.py  a20-populate_json_with_wikidata_ids.py  a30-populate_wikidata_ids.py  api_docs.md  b20-generate_wikidata_lookup.py  b30-update_json_from_md_files.py  b40-api-search-wdids-updated.py  build.sh  (+25 more)
lib/: brain_to_uuid.py  extractor.py
ui/: kweb-api.js
x/: entities.json
