[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
requests = "2.31.0"
flask = "2.3.3"
flask-cors = "4.0.0"
markdown = "3.4.4"
beautifulsoup4 = "4.12.2"
bs4 = "^0.0.1"
spacy = "3.6.1"
click = "8.1.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"